--- a/ConflictResolution/ConflictResolution/Base.lproj/Main.storyboard
+++ b/ConflictResolution/ConflictResolution/Base.lproj/Main.storyboard
@@ -26,6 +26,9 @@
                                 <rect key="frame" x="143" y="669" width="46" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
+                                <connections>
+                                    <segue destination="MXl-RJ-fSx" kind="show" id="6cT-R7-0vf"/>
+                                </connections>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Xi6-TU-eeK">
                                 <rect key="frame" x="118" y="336" width="97" height="34"/>
@@ -47,6 +50,22 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="141" y="139"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="rHS-Tt-dqf">
+            <objects>
+                <viewController id="MXl-RJ-fSx" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="OIR-Cj-0V9">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="bAL-RZ-CBr"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="sba-a5-R2u"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mAy-HD-8xy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1046" y="177"/>
         </scene>
     </scenes>
 </document>
